--- a/index.html
+++ b/index.html
@@ -398,10 +398,10 @@
                         <label for="price-range" class="form-label">Price Range</label>
                         <select class="form-select" id="price-range">
                             <option value="all">All Prices</option>
-                            <option value="0-150">$0 - $150</option>
-                            <option value="151-250">$151 - $250</option>
-                            <option value="251-500">$251 - $500</option>
-                            <option value="501+">$501+</option>
+                            <option value="0-1500">Rs.0 - Rs.1500</option>
+                            <option value="1510-2500">Rs.1510 - Rss.2500</option>
+                            <option value="2510-5000">Rs.2510 - Rs.5000</option>
+                            <option value="5001+">Rs.5001+</option>
                         </select>
                     </div>
                     <div class="col-md-3 mb-3">
@@ -601,7 +601,7 @@
                             <i class="fas fa-map-marker-alt me-3 mt-1 text-primary"></i>
                             <div>
                                 <h6>Address</h6>
-                                <p>123 Luxury Avenue, City Center, Metropolis 10001</p>
+                                <p>Nirana Inn,nahua more,rajgir,nalanda,bihar-803202</p>
                             </div>
                         </div>
                         
@@ -609,7 +609,7 @@
                             <i class="fas fa-phone me-3 mt-1 text-primary"></i>
                             <div>
                                 <h6>Phone</h6>
-                                <p>+1 (555) 123-4567</p>
+                                <p>+917894568266</p>
                             </div>
                         </div>
                         
@@ -1386,8 +1386,8 @@
                     id: 1,
                     name: "Deluxe King Room",
                     type: "deluxe",
-                    price12: 99,
-                    price24: 179,
+                    price12: 1000,
+                    price24: 1800,
                     capacity: 2,
                     description: "Spacious room with a king-sized bed, luxurious amenities, and a beautiful city view.",
                     amenities: [1, 2, 3, 4, 5],
@@ -1398,8 +1398,8 @@
                     id: 2,
                     name: "Executive Suite",
                     type: "suite",
-                    price12: 149,
-                    price24: 269,
+                    price12:2500,
+                    price24: 3000,
                     capacity: 3,
                     description: "Luxurious suite with separate living area, premium amenities, and panoramic views.",
                     amenities: [1, 2, 3, 4, 5, 6, 7],
@@ -1410,8 +1410,8 @@
                     id: 3,
                     name: "Standard Double Room",
                     type: "double",
-                    price12: 79,
-                    price24: 139,
+                    price12: 1200,
+                    price24: 1900,
                     capacity: 2,
                     description: "Comfortable room with two double beds, perfect for couples or small families.",
                     amenities: [1, 2, 3, 4],
@@ -1422,8 +1422,8 @@
                     id: 4,
                     name: "Single Business Room",
                     type: "single",
-                    price12: 69,
-                    price24: 119,
+                    price12: 2000,
+                    price24: 2800,
                     capacity: 1,
                     description: "Compact room designed for business travelers with a comfortable workspace.",
                     amenities: [1, 2, 3, 8],
