--- a/index.html
+++ b/index.html
@@ -1077,11 +1077,11 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <label for="room-price-12" class="form-label">Price for 12 Hours ($)</label>
+                                <label for="room-price-12" class="form-label">Price for 12 Hours (Rs.)</label>
                                 <input type="number" class="form-control" id="room-price-12" min="0" step="0.01" required>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label for="room-price-24" class="form-label">Price for 24 Hours ($)</label>
+                                <label for="room-price-24" class="form-label">Price for 24 Hours (Rs.)</label>
                                 <input type="number" class="form-control" id="room-price-24" min="0" step="0.01" required>
                             </div>
                         </div>
@@ -1143,11 +1143,11 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <label for="edit-room-price-12" class="form-label">Price for 12 Hours ($)</label>
+                                <label for="edit-room-price-12" class="form-label">Price for 12 Hours (Rs.)</label>
                                 <input type="number" class="form-control" id="edit-room-price-12" min="0" step="0.01" required>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label for="edit-room-price-24" class="form-label">Price for 24 Hours ($)</label>
+                                <label for="edit-room-price-24" class="form-label">Price for 24 Hours (Rs.)</label>
                                 <input type="number" class="form-control" id="edit-room-price-24" min="0" step="0.01" required>
                             </div>
                         </div>
@@ -1210,7 +1210,7 @@
                                 <input type="number" class="form-control" id="hall-capacity" min="1" required>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label for="hall-price" class="form-label">Price per Event ($)</label>
+                                <label for="hall-price" class="form-label">Price per Event (Rs.)</label>
                                 <input type="number" class="form-control" id="hall-price" min="0" step="0.01" required>
                             </div>
                         </div>
@@ -1270,7 +1270,7 @@
                                 <input type="number" class="form-control" id="edit-hall-capacity" min="1" required>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label for="edit-hall-price" class="form-label">Price per Event ($)</label>
+                                <label for="edit-hall-price" class="form-label">Price per Event (Rs.)</label>
                                 <input type="number" class="form-control" id="edit-hall-price" min="0" step="0.01" required>
                             </div>
                         </div>
