--- a/index.html
+++ b/index.html
@@ -1657,8 +1657,8 @@
                             <p class="card-text">${room.description}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="price-display">
-                                    <span class="price-main">Rs.${room.price24}/24hrs</span>
-                                    <span class="price-secondary">Rs.${room.price12}/12hrs</span>
+                                    <span class="price-main">$${room.price24}/24hrs</span>
+                                    <span class="price-secondary">$${room.price12}/12hrs</span>
                                 </div>
                                 <button class="btn btn-primary" onclick="openBookingModal('room', ${room.id})">Book Now</button>
                             </div>
