--- a/index.html
+++ b/index.html
@@ -1759,7 +1759,7 @@
                                 ${hallAmenities.length > 3 ? `<li>+${hallAmenities.length - 3} more</li>` : ''}
                             </ul>
                             <div class="d-flex justify-content-between align-items-center mt-3">
-                                <span class="h5 text-primary">$Rs.{hall.price}/event</span>
+                                <span class="h5 text-primary">$${hall.price}/event</span>
                                 <button class="btn btn-primary" onclick="openBookingModal('hall', ${hall.id})">Book Now</button>
                             </div>
                         </div>
