--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="hotel-address" class="form-label">Hotel Address</label>
-                                                <input type="text" class="form-control" id="hotel-address" value="123 Luxury Avenue, City Center, Metropolis 10001">
+                                                <input type="text" class="form-control" id="hotel-address" value="Nirana Inn,nahua more,rajgir,nalanda,bihar-803202">
                                             </div>
                                         </div>
                                         
@@ -955,8 +955,8 @@
                 <div class="col-md-3 mb-3">
                     <h5>Contact Info</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-map-marker-alt me-2"></i>123 Luxury Avenue, City Center</li>
-                        <li><i class="fas fa-phone me-2"></i>+1 (555) 123-4567</li>
+                        <li><i class="fas fa-map-marker-alt me-2"></i>Nirana Inn,nahua more,rajgir,nalanda,bihar-803202</li>
+                        <li><i class="fas fa-phone me-2"></i>+9782466515</li>
                         <li><i class="fas fa-envelope me-2"></i>info@hotelnirvana.com</li>
                     </ul>
                 </div>
