--- a/index.html
+++ b/index.html
@@ -955,8 +955,8 @@
                 <div class="col-md-3 mb-3">
                     <h5>Contact Info</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-map-marker-alt me-2"></i>Nirana Inn,nahua more,rajgir,nalanda,bihar-803202</li>
-                        <li><i class="fas fa-phone me-2"></i>+9782466515</li>
+                        <li><i class="fas fa-map-marker-alt me-2"></i>Nirvana Inn,Nahua more,Rajgir,Nalanda,Bihar-803202</li>
+                        <li><i class="fas fa-phone me-2"></i>+919782466515</li>
                         <li><i class="fas fa-envelope me-2"></i>info@hotelnirvana.com</li>
                     </ul>
                 </div>
