--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 </div>
                 <div class="col-md-6">
                     <h2 class="mb-3">Our Story</h2>
-                    <p>Established in 2005, Hotel Nirvana has been providing exceptional hospitality experiences for nearly two decades. Our commitment to luxury, comfort, and personalized service has made us a preferred choice for travelers and event organizers alike.</p>
+                    <p>Established in 2024, Hotel Nirvana has been providing exceptional hospitality experiences for nearly two decades. Our commitment to luxury, comfort, and personalized service has made us a preferred choice for travelers and event organizers alike.</p>
                     <p>Located in the heart of the city, we offer easy access to business districts, shopping centers, and cultural attractions while providing a peaceful retreat from the bustling city life.</p>
                 </div>
             </div>
@@ -601,7 +601,7 @@
                             <i class="fas fa-map-marker-alt me-3 mt-1 text-primary"></i>
                             <div>
                                 <h6>Address</h6>
-                                <p>Nirana Inn,nahua more,rajgir,nalanda,bihar-803202</p>
+                                <p>Nirvana Inn,Nahua more,Rajgir,Nalanda,Bihar-803202</p>
                             </div>
                         </div>
                         
