--- a/index.html
+++ b/index.html
@@ -908,13 +908,13 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="hotel-address" class="form-label">Hotel Address</label>
-                                                <input type="text" class="form-control" id="hotel-address" value="Nirana Inn,nahua more,rajgir,nalanda,bihar-803202">
+                                                <input type="text" class="form-control" id="hotel-address" value="Nirana Inn,Nahua more,Rajgir,Nalanda,Bihar-803202">
                                             </div>
                                         </div>
                                         
                                         <div class="mb-3">
                                             <label for="about-text" class="form-label">About Text</label>
-                                            <textarea class="form-control" id="about-text" rows="4">Established in 2005, Hotel Nirvana has been providing exceptional hospitality experiences for nearly two decades. Our commitment to luxury, comfort, and personalized service has made us a preferred choice for travelers and event organizers alike.</textarea>
+                                            <textarea class="form-control" id="about-text" rows="4">Established in 2024, Hotel Nirvana has been providing exceptional hospitality experiences for nearly two decades. Our commitment to luxury, comfort, and personalized service has made us a preferred choice for travelers and event organizers alike.</textarea>
                                         </div>
                                         
                                         <button type="submit" class="btn btn-primary">Save Settings</button>
@@ -971,7 +971,7 @@
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p>&copy; 2023 Hotel Nirvana. All rights reserved.</p>
+                <p>&copy; 2024 Hotel Nirvana. All rights reserved.</p>
             </div>
         </div>
     </footer>
