--- a/index.html
+++ b/index.html
@@ -1625,7 +1625,7 @@
         // Admin credentials
         const ADMIN_CREDENTIALS = {
             username: "admin",
-            password: "admin123"
+            password: "admin@@123"
         };
 
         // Session management
